<resources>
    <string name="app_name">Motmaen</string>
    <string name="map_api_key">AIzaSyA6QI378BHt9eqBbiJKtqWHTSAZxcSwN3Q</string>
    <string name="search_key">AIzaSyAeyMUJgKAhnNXbILHONb1um72CNzELFRY</string>
    <string name="field_req">Field required</string>
    <string name="login">Log In</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone number</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="video">Sent video message</string>
    <string name="voice">Sent voice message</string>
    <string name="image">Sent image</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_requests">No requests</string>
    <string name="req_refused">Your request refused</string>
    <string name="req_accepted">Your request accepted</string>
    <string name="no_conversation">No conversation</string>
    <string name="logo"><![CDATA[Doctor is <font color="#F61C00">beside you</font>]]></string>
    <string name="choose_language"><![CDATA[Choose <font color="#F61C00">Language</font>]]></string>
    <string name="next">Next</string>
    <string name="login2"><![CDATA[Log <font color="#F61C00">In</font>]]></string>
    <string name="please_enter_code_sent_to">Please enter code sent to</string>
    <string name="resend">Resend in</string>
    <string name="inv_code">Invalid Code</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="chronic_diseases">Chronic diseases</string>
    <string name="ch_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ch_blood">Choose blood type</string>
    <string name="ch_diseases">Choose diseases</string>
    <string name="select">Select</string>
    <string name="resend2">Resend</string>
    <string name="appointments">Appointments</string>
    <string name="consulting">Consulting</string>
    <string name="medicine">Medicine</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="change_language">Change Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="social_media">Social Media</string>
    <string name="doctor">Doctor</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="labs">Labs</string>
    <string name="x_ray_center">X-Ray Center</string>
    <string name="medical_advice">Medical Advice</string>
    <string name="emergency">Emergency</string>
    <string name="no_ads_to_show">No Ads to show</string>
    <string name="km">Km</string>
    <string name="get_location"><![CDATA[Getting <font color="#F61C00">Location...</font>]]></string>
    <string name="customers_rating">Cutomer Rating</string>
    <string name="iraqi_dinar">Iraqi dinar</string>
    <string name="working_hours">Working Hours</string>
    <string name="ok2">Ok</string>
    <string name="work_hour_not_aval">Working hours not available</string>
    <string name="show">Show</string>
    <string name="open_now">Open Now</string>
    <string name="closed">Closed</string>
    <string name="available_doctors">Available Doctors</string>
    <string name="no_doctors_available">No Doctors Available</string>
    <string name="your_doctor">Your Doctor</string>
    <string name="search2">Search</string>
    <string name="specialization">Specialization</string>
    <string name="nearby">NearBy</string>
    <string name="city">City</string>
    <string name="filter_by">Filter By:</string>
    <string name="distance">Distance :</string>
    <string name="doctor2">Doctor/</string>
    <string name="details">Details</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="ratings">Ratings</string>
    <string name="reserve">Reserve</string>
    <string name="reserve_consultation">Reserve consultation</string>
    <string name="price">Price :</string>
    <string name="clinic">Clinic</string>
    <string name="live">Video</string>
    <string name="choose_date">Choose Date</string>
    <string name="available_appointments">Available Appointments</string>
    <string name="write_your_consultation">Write your consultation</string>
    <string name="send">Send</string>
    <string name="weight">Weight(kg)</string>
    <string name="height_cm">Height(cm)</string>
    <string name="fat">Fat</string>
    <string name="hospitals">Hospitals</string>
    <string name="filter">Filter</string>
    <string name="high_price">High price</string>
    <string name="low_price">Low price</string>
    <string name="rate">Rate</string>
    <string name="less_time">Less time</string>
    <string name="call">Call</string>
    <string name="server_error">Server Error</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="not_available">Not Avalible</string>
    <string name="detection_duration">Detection duration</string>
    <string name="reserve_now">Reserve now</string>
    <string name="reserved">Reserved</string>
    <string name="reservation_confirmation">reservation confirmation</string>
    <string name="confirm_reservation_and_payment">Confirm reservation and payment</string>
    <string name="cash">Cash</string>
    <string name="pay_online">Pay Online</string>
    <string name="detection_price">Detection price</string>
    <string name="address">Address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="cancel_reservision">Cancel Reservision</string>
    <string name="set_another_appointment">Set Another Appoinment</string>
    <string name="cancel_reason">Cancel Reason</string>
    <string name="Update_resev">Update Reservision</string>
    <string name="not_notification_to_show">No Notificaion To Show</string>
    <string name="phone_found">Phone Found</string>
    <string name="select_disease">Select Disease</string>
    <string name="type_message">Type Message</string>
    <string name="no_appoinment_to_show">No Appoinment To Show</string>
    <string name="notes">Notes</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_more">Add More</string>
    <string name="want_resrv">Want Consulting</string>
    <string name="you_can_call_doctor_on">You Can Call Doctor on</string>
    <string name="suc">Success</string>
    <string name="not_avail_now">Not Avaliable Now</string>
    <string name="favourite">Favourite</string>
    <string name="drug_name">Drug Name</string>
    <string name="dose">Dose</string>
    <string name="show_all">ٍShow All</string>
    <string name="link_inc">This link is incorrect</string>
    <string name="calling">Calling</string>
    <string name="rating">Rating</string>
    <string name="comment">Comment</string>
    <string name="add_rate">Add Rate</string>
    <string name="available">Available </string>
    <string name="notavailable"> Not Available  </string>
<string name="finished">finished</string>
</resources>