<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"

        >
        <ImageView
            android:id="@+id/img_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_close"
            android:padding="12dp"
            android:layout_centerVertical="true"
            android:tint="@color/gray4"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/rating"
            />
    </RelativeLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/simplarate"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:srb_drawBorderEnabled="true"
        app:srb_isIndicator="false"
        app:srb_numberOfStars="5"
        app:srb_starBackgroundColor="@color/white"
        app:srb_starBorderWidth="3"
        app:srb_starSize="30dp"
        app:srb_starsSeparation="10dp"
        app:srb_stepSize=".3" />

    <TextView
        android:id="@+id/tv_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        />


    <LinearLayout
        android:id="@+id/ll_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical"
        android:visibility="visible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray4"
            android:textSize="17sp"
            android:text="@string/comment"
            android:layout_marginBottom="8dp"
            />
        <EditText
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@drawable/small_rounded_bottom_gray"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            />



    </LinearLayout>

    <Button
        android:id="@+id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:background="@drawable/small_rounded_red"
        android:textSize="20sp"
        android:text="@string/add_rate"


        />



    </LinearLayout>

