<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="lang"
            type="String" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity_emergency.EmergencyActivity"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                >
                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_left_arrow"
                        app:tint="@color/color1"
                        android:padding="3dp"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        android:clickable="false"
                        android:longClickable="false"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/emergency"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"

            >
            <ImageView
                android:id="@+id/image"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toTopOf="@id/image"
                app:layout_constraintBottom_toBottomOf="@id/image"
                android:background="@color/color1"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"

                />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_default="wrap"
                app:layout_constraintHorizontal_bias="0"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/available_doctors"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/tvNoDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/no_doctors_available"
                android:visibility="gone"
                />
        </FrameLayout>

    </LinearLayout>
</layout>
