<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <ImageView
                            android:id="@+id/imageBack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/reserve_image"
                            android:scaleType="centerCrop"
                            />

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:background="@color/colorPrimary"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:gravity="center_vertical"
                        >
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_money"
                            app:tint="@color/white"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:text="@string/price"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            />
                    </LinearLayout>

                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/colorPrimary"
                    android:alpha=".4"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="bottom|end"
                    android:textSize="20sp"
                    android:text="@string/reserve"
                    android:layout_marginBottom="60dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"

                    />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_left_arrow"
                    app:tint="@color/color1"
                    android:padding="7dp"
                    android:background="@drawable/circle_white"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    />
            </FrameLayout>
            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                >
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLive"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="5dp"


                    >
                    <FrameLayout
                        android:id="@+id/flLive"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:longClickable="false"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_gravity="center"
                            >
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/live"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/live"
                                />
                        </LinearLayout>

                    </FrameLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardCall"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="5dp"

                    >
                    <FrameLayout
                        android:id="@+id/flCall"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:longClickable="false"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_gravity="center"
                            >
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/call3"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/call"
                                />
                        </LinearLayout>
                    </FrameLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardChat"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="5dp"

                    >
                    <FrameLayout
                        android:id="@+id/flChat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:longClickable="false"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_gravity="center"
                            >
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/chat3"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/chat"
                                />
                        </LinearLayout>
                    </FrameLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                >
                <LinearLayout
                    android:id="@+id/llDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_calendar"
                        app:tint="@color/color1"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray6"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="15sp"
                        android:text="@string/choose_date"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray3"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                >
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:src="@drawable/line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toTopOf="@id/image"
                    app:layout_constraintBottom_toBottomOf="@id/image"
                    android:background="@color/color1"
                    app:layout_constraintStart_toEndOf="@id/image"
                    app:layout_constraintEnd_toEndOf="@id/tvTitle"

                    />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintWidth_default="wrap"
                    app:layout_constraintHorizontal_bias="0"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/available_appointments"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</layout>
